update html file

--- a/src/dev/collapsible_tree_v3.html
+++ b/src/dev/collapsible_tree_v3.html
@@ -83,5 +83,5 @@
 <div id="tree-container"></div>
 </body>
 <script src="../dist/merged_ontology_data.json"></script>
-<script src="dev/collapsible_tree_v3_internal_data.js"></script>
+<script src="src_script.js"></script>
 </html>
