update viewer for decifr tool

--- a/src/dev/collapsible_tree_v3.html
+++ b/src/dev/collapsible_tree_v3.html
@@ -82,6 +82,7 @@
 <div id="styleCombo"></div>
 <div id="tree-container"></div>
 </body>
-<script src="../dist/merged_ontology_data.json"></script>
+<!-- <script src="../dist/merged_ontology_data.json"></script> -->
+<script src="../merged_ontology_data.json"></script>
 <script src="src_script.js"></script>
 </html>
