--- a/src/dev/collapsible_tree_v3.html
+++ b/src/dev/collapsible_tree_v3.html
@@ -83,6 +83,6 @@
 <div id="tree-container"></div>
 </body>
 <!-- <script src="../dist/merged_ontology_data.json"></script> -->
-<script src="../merged_ontology_data.json"></script>
+<script src="../merged_ontology_data.js"></script>
 <script src="src_script.js"></script>
 </html>
