--- a/src/dev/collapsible_tree_v3.html
+++ b/src/dev/collapsible_tree_v3.html
@@ -55,31 +55,37 @@
     input[type='number']{
         width: 5em;
     }
+    #toolbar {
+        position:fixed;
+        top: 5px;
+    }
 
 </style>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://d3js.org/d3.v3.min.js"></script>
 <body>
-<input type="button" id="downloadSvg" value="Download" onclick="downloadSvg()"
-       title="Download the graph as an SVG file"/>
-<input type="button" value="Collapse" onclick="collapseAllAndUpdate()" title="Collapse all nodes"/>
-<input type="button" value="Expand matched" onclick="expandMatchedAndUpdate()" title="Expand all nodes with matches"/>
-<input type="button" value="Expand" onclick="expandAllAndUpdate()" title="Expand full tree"/>
-<input type="button" value="Scale" onclick="toggleScalingAndUpdate()"
-       title="Toggle scaling of nodes depending on number of matches"/>
-<input type="button" value="Only matched" onclick="toggleFilterMatched()"
-       title="Toggle filtering by match"/>
-<label for="inputFontSize">Font:</label>
-<input type="number" id="inputFontSize" name="inputFontSize" value=12 size="4" maxlength="4" title="Font size">
-<label for="inputCharWidth">Width:</label>
-<input type="number" id="inputCharWidth" name="inputCharWidth" value=2.5 size="4" maxlength="4"
-       title="Width between classes (per character)">
+<div  id="toolbar">
+    <input type="button" id="downloadSvg" value="Download" onclick="downloadSvg()"
+           title="Download the graph as an SVG file"/>
+    <input type="button" value="Collapse" onclick="collapseAllAndUpdate()" title="Collapse all nodes"/>
+    <input type="button" value="Expand matched" onclick="expandMatchedAndUpdate()" title="Expand all nodes with matches"/>
+    <input type="button" value="Expand" onclick="expandAllAndUpdate()" title="Expand full tree"/>
+    <input type="button" value="Scale" onclick="toggleScalingAndUpdate()"
+           title="Toggle scaling of nodes depending on number of matches"/>
+    <input type="button" value="Only matched" onclick="toggleFilterMatched()"
+           title="Toggle filtering by match"/>
+    <label for="inputFontSize">Font:</label>
+    <input type="number" id="inputFontSize" name="inputFontSize" value=12 size="4" maxlength="4" title="Font size">
+    <label for="inputCharWidth">Width:</label>
+    <input type="number" id="inputCharWidth" name="inputCharWidth" value=2.5 size="4" maxlength="4"
+           title="Width between classes (per character)">
 
-<label for="inputHeight">Height:</label>
-<input type="number" id="inputHeight" name="inputHeight" value=40 size="4" maxlength="4"
-       title="Height per line">
-<!-- Style combobox - placeholder will be filled by d3 -->
-<div id="styleCombo"></div>
+    <label for="inputHeight">Height:</label>
+    <input type="number" id="inputHeight" name="inputHeight" value=40 size="4" maxlength="4"
+           title="Height per line">
+    <!-- Style combobox - placeholder will be filled by d3 -->
+    <div id="styleCombo"></div>
+</div>
 <div id="tree-container"></div>
 </body>
 <!-- <script src="../dist/merged_ontology_data.json"></script> -->
